# fletcher

./: .flake8  Pipfile  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  version.py
.circleci/: config.yml
ci/: circle_build_linux.sh
fletcher/: _algorithms.py  _numba_compat.py  base.py  string_array.py
fletcher/algorithms/: string.py
fletcher/algorithms/utils/: chunking.py
recipe/: meta.yaml
tests/: conftest.py  test_algorithms.py  test_base.py  test_numba_integration.py  test_pandas_extension.py  test_pandas_integration.py
