[metadata]
name = tinyclues_fletcher
version = attr: version.VERSION
description = forked fletcher lib
long_description = file: README.md
url = 'https://github.com/tinyclues/fletcher'
classifiers =
        Programming Language :: Python :: 3.6

[options]
packages = find:
zip_safe = False

[options.packages.find]
exclude = 'tests*'

[bdist_wheel]
universal = 1
